# stafi-node

./: Cargo.toml  README.md  config.json
modules/stafi-voting/: Cargo.toml
modules/stafi-voting/src/: lib.rs  voting.rs
node/cli/: Cargo.toml
node/cli/src/: chain_spec.rs  factory_impl.rs  lib.rs  service.rs
node/executor/: Cargo.toml
node/executor/src/: lib.rs
node/modules/stafi-crypto/: Cargo.toml
node/modules/stafi-crypto/src/: tests.rs
node/modules/stafi-fund/: Cargo.toml
node/modules/stafi-fund/src/: lib.rs
node/modules/stafi-multisig/: Cargo.toml
node/modules/stafi-multisig/src/: lib.rs  transaction.rs
node/modules/stafi-staking/: Cargo.toml
node/modules/stafi-staking/src/: atomstaking.rs  lib.rs  xtzstaking.rs
node/modules/stafi-voting/: Cargo.toml  README.md
node/modules/stafi-voting/src/: lib.rs  voting.rs
node/modules/tokenbalances/: Cargo.toml
node/modules/tokenbalances/src/: lib.rs
node/primitives/: Cargo.toml
node/primitives/src/: lib.rs  stafistaking.rs  tokenbarances.rs
node/rpc/: Cargo.toml
node/rpc/src/: accounts.rs  lib.rs
node/runtime/: Cargo.toml  build.rs
node/runtime/src/: constants.rs  impls.rs  lib.rs
node/service/: Cargo.toml
node/service/src/: chain_spec.rs  fixtures.rs  lib.rs
node/src/: main.rs
scripts/: keygen.sh  purge-chain.sh
