[package]
name = "stafi"
version = "0.1.0"
authors = ["Stafi Protocol"]
build = "build.rs"
edition = "2018"

[[bin]]
name = "stafi"
path = "node/src/main.rs"

[dependencies]
error-chain = "0.12"
stafi-cli = { path = "node/cli" }
futures = "0.1"
ctrlc = { version = "3.0", features = ["termination"] }
serde_json = "1.0"
clap = "~2.32"

[build-dependencies]
vergen = "3"

[workspace]
members = [
	"node/runtime",
	"node/cli",
	"node/executor",
	"node/primitives",
	"node/service",
	"modules/stafi-voting",
]

[badges]
travis-ci = { repository = "paritytech/substrate", branch = "master" }
maintenance = { status = "actively-developed" }
is-it-maintained-issue-resolution = { repository = "paritytech/substrate" }
is-it-maintained-open-issues = { repository = "paritytech/substrate" }

[profile.release]
# Substrate runtime requires unwinding.
panic = "unwind"
