[package]
name = "node-rpc"
version = "2.0.0"
authors = ["Stafi Protocol"]
edition = "2018"

[dependencies]
client = { package = "substrate-client", git = "https://github.com/stafiprotocol/stafi-blockchain" }
jsonrpc-core = "13.1.0"
jsonrpc-core-client = "13.1.0"
jsonrpc-derive = "13.1.0"
jsonrpc-pubsub = "13.1.0"
keyring = { package = "substrate-keyring", git = "https://github.com/stafiprotocol/stafi-blockchain" }
log = "0.4"
stafi-primitives = { path = "../primitives" }
codec = { package = "parity-scale-codec", version = "1.0.0" }
serde = { version = "1.0", features = ["derive"] }
sr-primitives = { package = "sr-primitives", git = "https://github.com/stafiprotocol/stafi-blockchain", default-features = false }
substrate-primitives = { git = "https://github.com/stafiprotocol/stafi-blockchain", default-features = false }
transaction_pool = { package = "substrate-transaction-pool", git = "https://github.com/stafiprotocol/stafi-blockchain" }

[dev-dependencies]
stafi-runtime = { path = "../runtime" }
env_logger = "0.6"
