[package]
name = "stafi-staking"
version = "0.1.0"
authors = ["Tore <technical@stafi.io>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", default-features = false, optional = true }
serde_derive = { version = "1.0", optional = true }
safe-mix = { version = "1.0", default-features = false }
parity-codec = { package = "parity-scale-codec", version = "1.0.0", default-features = false, features = ["derive"] }
substrate-keyring = { git = "https://github.com/stafiprotocol/stafi-blockchain", optional = true }
substrate-primitives = { git = "https://github.com/stafiprotocol/stafi-blockchain", default-features = false }
sr-std = { git = "https://github.com/stafiprotocol/stafi-blockchain", default-features = false }
sr-io = { git = "https://github.com/stafiprotocol/stafi-blockchain", default-features = false }
sr-primitives = { git = "https://github.com/stafiprotocol/stafi-blockchain", default-features = false }
srml-support = { git = "https://github.com/stafiprotocol/stafi-blockchain", default-features = false }
srml-system = { git = "https://github.com/stafiprotocol/stafi-blockchain", default-features = false }
srml-balances = { git = "https://github.com/stafiprotocol/stafi-blockchain", default-features = false }
session = { package = "srml-session", git = "https://github.com/stafiprotocol/stafi-blockchain", default-features = false }
im-online = { package = "srml-im-online", git = "https://github.com/stafiprotocol/stafi-blockchain", default-features = false }

stafi-primitives = { path = "../../primitives", default-features = false }
token-balances = { path = "../tokenbalances", default-features = false }
log = "0.4"

[features]
default = ["std"]
std = [
    "serde/std",
    "serde_derive",
    "safe-mix/std",
    "parity-codec/std",
    "substrate-primitives/std",
    "sr-std/std",
    "sr-io/std",
    "srml-support/std",
    "sr-primitives/std",
    "srml-system/std",
    "srml-balances/std",
    "stafi-primitives/std",
]
